This this the changelog file for the Pothos Blocks toolkit.

Release 0.3.0 (pending)
==========================

- Created label to message event block
- Added timeout param for socket endpoint open/close
- Reorganized utility blocks into testers and stream
- Moved communications blocks to pothos-comms toolkit

Release 0.2.2 (pending)
==========================

- Fix undefined usage of std::polar() in FIR taps generator
- Type casts in SocketEndpoint for using 64-bit Poco::ByteOrder
- Sporadic blocks replace generate_canonical because of MSVC bug

Release 0.2.1 (2015-08-26)
==========================

- Strategic resizing of the waveform source table
- Created bursty modulation framer and sync blocks
- Created wave trigger for waveform monitor back-end
- Added labeled burst support to the FIR filter
- Fix stream snooper label index adjustment logic
- Support start label length in Stream to Packet
- Added wait taps active mode to FIR filter block
- Added element count to labels in Packet to Stream
- Added missing setGain to FIR Designer setter list
- Fix finite release block output buffer truncation
- Stream snooper buffer accumulator optimization
- Fixed typo in delay block description markup
- Fix stream snooper alignment mode time trigger
- Network blocks support jumbo sized transfers
- Fix stream snooper disable propagate labels
- Rename transform signal/slots block to evaluator
- Created stream relabeler utility block
- Created threshold labeler utility block
- Created envelope detector filter block
- Packet to/from stream blocks support frame labels
- Fixed sporadic dropper to set the label width
- Added simple LLC block for logical link control
- Created sporadic dropper for reliability testing
- Fix feeder element generator to support unsigned
- Feeder+collector blocks support packets in test plan
- Support packet payloads for symbol conversion blocks
- Added multiple option to Feeder source test plan
- Added symbols to bytes conversion block